--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -59,6 +59,7 @@ a {
   color: #4daab3 !important;
 }
 
+
 //This is all styling for the article page
 .articleBox {
   display: flex;
@@ -66,7 +67,7 @@ a {
 
 }
 #readmorelink {
-  color: black
+  font-weight: bold;
 }
 
 
@@ -77,9 +78,6 @@ a {
   padding: 15px 10px 10px 10px
 }
 
-#readmorelink {
-  color: black !important;
-}
 #articleSubtitle {
   margin: 5px 10px 5px 10px;
 }
